--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://capik.github.io./kapik",
   "name": "kapik",
   "version": "0.1.0",
   "private": true,
@@ -12,10 +13,14 @@
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.8.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^9.1.0",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.7"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,6 +43,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23"
   }
